# SimdJson.Net

./: .editorconfig  .gitignore  AGENTS.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  README.md  SimdJson.Net.sln  SimdJson.Net.slnx  global.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
NupkgValidator/: NupkgValidator.csproj  Program.cs  nuget.config
Samples/01-BasicParsing/: Program.cs
Samples/02-ArrayIteration/: Program.cs
Samples/03-ObjectIteration/: Program.cs
Samples/04-JsonPointerAndPath/: Program.cs
Samples/05-NumberTypes/: Program.cs
Samples/06-StreamParsing/: Program.cs
Samples/07-ZeroAllocation/: 07-ZeroAllocation.csproj  Program.cs
Samples/08-ErrorHandling/: Program.cs
Samples/09-RealWorld-GeoJson/: Program.cs
Samples/10-RealWorld-LogParser/: Program.cs
Samples/11-WildcardAndRawString/: 11-WildcardAndRawString.csproj  Program.cs
Samples/12-DocumentScalarsAndCounting/: Program.cs
Samples/13-NdjsonParsing/: Program.cs
SimdJson.Net/: JsonArray.cs  JsonDocument.cs  JsonNumber.cs  JsonNumberType.cs  JsonObject.cs  JsonValue.cs  JsonValueKind.cs  NdjsonParser.cs  SimdJson.Net.csproj  SimdJsonException.cs  SimdJsonParser.cs
SimdJson.Net.Benchmark/: JsonDataGenerator.cs  Program.cs  SimdJson.Net.Benchmark.csproj
SimdJson.Net.Benchmark/Benchmarks/: FieldAccessBenchmarks.cs  FullTraversalBenchmarks.cs  ParseOnlyBenchmarks.cs
SimdJson.Net.Native/: CMakeLists.txt  CMakePresets.json
SimdJson.Net.Native/include/: simdjson_native.h
SimdJson.Net.Native/src/: simdjson_native.cpp
SimdJson.Net.Tests/: ArrayTests.cs  DocumentTests.cs  ErrorTests.cs  NdjsonParserTests.cs  NumberTests.cs  ObjectTests.cs  ParserTests.cs  PathTests.cs  SimdJson.Net.Tests.csproj  SimdJsonTests.cs  StringTests.cs  UtilityTests.cs  ValueTests.cs
SimdJson.Net/Internal/: NativeLoader.cs  NativeMethods.cs
SimdJsonNative/: CMakeLists.txt
SimdJsonNative/include/: simdjson_native.h
SimdJsonNative/src/: simdjson_native.cpp
bench/SimdJson.Net.Benchmarks/: ParseBenchmarks.cs  Program.cs  SampleData.cs  SimdJson.Net.Benchmarks.csproj
docs/: API.md  DesignNotes.md  JsonArray.md  JsonDocument.md  JsonObject.md  JsonValue.md  NdjsonParser.md  Numbers.md  SimdJsonParser.md  Types.md
src/SimdJson.Net/: JsonDocument.cs  JsonElement.cs  JsonElementType.cs  SimdJson.Net.csproj  SimdJsonException.cs
src/SimdJson.Net/Internal/: BitUtils.cs  StructuralIndexer.cs
src/SimdJson.Net/Stage2/: TapeBuilder.cs
tests/SimdJson.Net.Tests/: BasicParseTests.cs  GlobalUsings.cs  SimdJson.Net.Tests.csproj  StructuralIndexerTests.cs
